tests/invalid/List_Invalid_2.whiley
method main() -> void:
    int x = a2[0]
